welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:4: error: not found: value Fizz
		chaine=chaine+Fizz
                              ^fizzBuzz:7: error: not found: value Buzz
		chaine=chaine+Buzz
                              ^