welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
	var chaine:String = ""
	if (a%3==0) {
		chaine=chaine+Fizz
	}
	if (a%5==0) {
		chaine=chaine+Buzz
	}
	return chaine
}
